--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
-cat > .gitignore <<'GIT'
-# Python/venv
 .venv/
 __pycache__/
 *.pyc
-
-# Entorno/secretos
 .env
-*.env
-
-# Datos y artefactos
-data/
-*.duckdb
-*.parquet
-
-# Streamlit/otros
+*.sqlite
+data/processed/
+reports/
 .streamlit/
-
-# OS/IDE
 .DS_Store
-.vscode/
-.idea/
-GIT
